# globus

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-optional.txt  requirements.txt
config/: .env.example  persona.example.md
docker/: entrypoint.sh
docs/: TRUTH_LAYER_BUILD_STORY.md  claude-oauth-proxy.md  nginx-globus.conf  voice-setup.md
globus_truth/: README.md  __init__.py  __main__.py  action_gate.py  agent_adapter.py  approval_center.py  approval_challenge.py  evaluator.py  fixtures.py  judge_mode.py  outcome_challenge.py  platform-registry-v1.json  platform_registry.py  receipt-schema-v1.json  reference_actions.py  service.py  storage.py  verified_action_lab.py  verified_action_timeline.py  verified_actions.py  web.py
public/: styles.css
schema/: globus_schema.sql
scripts/: add_member.py  check_install.py  email_intel_run.py  opportunity_run.py  run_agent.py  sales_desk_run.py  test_all.py
server/: agent_runner.py  agents_dashboard_html.py  agents_runtime.py  auth_cookies.py  bridge_ingest.py  composio_helpers.py  connectors_html.py  db_helpers.py  drive_extract.py  email_intel.py  globus_agents_catalog.py  globus_agents_helpers.py  globus_agents_html.py  globus_auth.py  globus_briefs_html.py  globus_chat_helpers.py  globus_chat_html.py  globus_chrome.py  globus_llm.py  globus_orchestrator.py  globus_search.py  globus_server.py  globus_setup_html.py  globus_tool_policy.py  globus_tools_schema.py  globus_vault_db.py  globus_web_read.py  google_drive.py  google_gmail.py  google_oauth.py  (+26 more)
(+62 files in other folders)
